<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.users.UserListFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/abl_top_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/mt_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_scrollFlags="scroll|enterAlways|snap"
            app:menu="@menu/main_menu"
            app:subtitleTextColor="@color/colorWhite"
            app:title="@string/app_name"
            app:titleTextColor="@color/colorWhite"/>

    </com.google.android.material.appbar.AppBarLayout>

    <EditText
        android:id="@+id/et_search_user_name"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:hint="@string/text_hint_search_by_user_name"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        app:layout_constraintTop_toBottomOf="@id/abl_top_toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/ib_search"
        android:contentDescription="@string/description_search_text_field"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tv_empty_user_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorRed"
        android:text="@string/text_empty_user_name_error"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/et_search_user_name"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/tv_users_ordered_by"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_empty_user_error"/>

    <ImageButton
        android:id="@+id/ib_search"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:src="@drawable/ic_search"
        app:layout_constraintTop_toTopOf="@id/et_search_user_name"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/description_search_button" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_users_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_users_ordered_by"
        tools:listitem="@layout/item_user"/>

    <TextView
        android:id="@+id/tv_empty_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_error_no_users_found"
        android:visibility="gone"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>