<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/nav_completed"
        android:visible="true"
        android:title="@string/text_bottom_menu_completed"
        app:showAsAction="always|withText"/>

    <item
        android:id="@+id/nav_authored"
        android:visible="true"
        android:title="@string/text_bottom_menu_authored"
        app:showAsAction="always|withText"/>

</menu>